[package]
name = "sauti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
dasp_sample = "0.11.0"
flagset = "0.4.5"
itertools = "0.12.1"
log = "0.4.20"
paste = "1.0.14"
rubato = "0.15.0"
symphonia = { version = "0.5.3", features = ["all", "opt-simd"] }
thiserror = "1.0.53"

[dev-dependencies]
env_logger = "0.11.1"
regex = "1.10.3"

[lints.clippy]
enum_glob_use = "warn"
pedantic = "warn"
nursery = "warn"
