[package]
name = "sauti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
dasp_sample = "0.11.0"
flagset = "0.4.5"
itertools = "0.13.0"
log = "0.4.20"
paste = "1.0.14"
rubato = { version = "0.15.0", optional = true }
serde = { version = "1.0.197", optional = true }
symphonia = { version = "0.5.3", features = [
  "all",
  "opt-simd",
], optional = true }
thiserror = "1.0.53"

[dev-dependencies]
env_logger = "0.11.1"
regex = "1.10.3"
# this is a hack to ensure that these features are enabled in doc-tests
sauti = { path = ".", features = ["player", "test"] }

[features]
default = ["player"]
player = ["decoder", "effect", "output"]
decoder = ["dep:symphonia"]
effect = ["dep:rubato"]
# cpal cannot be optional, as it's required for data
output = []
test = []
serde = ["dep:serde"]

[lints.clippy]
enum_glob_use = "warn"
pedantic = "warn"
nursery = "warn"
